force-app/main/default/objects/Nebula__LogEntry__c/Nebula__LogEntry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <label>Entry ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>