force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ExceptionStackTrace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>