force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__HasDatabaseResult__c.field-meta.xml
<CustomField>
    <fullName>Nebula__HasDatabaseResult__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Nebula__DatabaseResultType__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Database Result</label>
    <type>Checkbox</type>
</CustomField>