force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__HasException__c.field-meta.xml
<CustomField>
    <fullName>Nebula__HasException__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Nebula__ExceptionType__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Exception</label>
    <type>Checkbox</type>
</CustomField>