force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__HasRecordId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__HasRecordId__c</fullName>
    <formula>Nebula__RecordId__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Related Record</label>
    <type>Checkbox</type>
</CustomField>