force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__HasRecordJson__c.field-meta.xml
<CustomField>
    <fullName>Nebula__HasRecordJson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Related Record JSON</label>
    <type>Checkbox</type>
</CustomField>