force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsAggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsAggregateQueries__c</fullName>
    <formula>TEXT(Nebula__LimitsAggregateQueriesUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsAggregateQueriesMax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Queries</label>
    <type>Text</type>
</CustomField>