force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsAggregateQueriesUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsAggregateQueriesUsed__c</fullName>
    <label>Aggregate Queries Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>