force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsCallouts__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsCallouts__c</fullName>
    <formula>TEXT(Nebula__LimitsCalloutsUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsCalloutsMax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callouts</label>
    <type>Text</type>
</CustomField>