force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsCpuTimeUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsCpuTimeUsed__c</fullName>
    <label>CPU Time Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>