force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsDmlRows__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsDmlRows__c</fullName>
    <formula>TEXT(Nebula__LimitsDmlRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsDmlRowsMax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Rows</label>
    <type>Text</type>
</CustomField>