force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsDmlRowsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsDmlRowsMax__c</fullName>
    <label>DML Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>