force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsEmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsEmailInvocations__c</fullName>
    <formula>TEXT(Nebula__LimitsEmailInvocationsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsEmailInvocationsMax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Invocations</label>
    <type>Text</type>
</CustomField>