force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsEmailInvocationsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsEmailInvocationsMax__c</fullName>
    <label>Email Invocations Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>