force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsHeapSizeMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsHeapSizeMax__c</fullName>
    <label>Heap Size Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>