force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsHeapSizeUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsHeapSizeUsed__c</fullName>
    <label>Heap Size Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>