force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsQueueableJobsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsQueueableJobsMax__c</fullName>
    <label>Queueable Jobs Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>