force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsQueueableJobsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsQueueableJobsUsed__c</fullName>
    <label>Queueable Jobs Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>