force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueries__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueries__c</fullName>
    <formula>TEXT(Nebula__LimitsSoqlQueriesUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueriesMax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>