force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueriesMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueriesMax__c</fullName>
    <label>SOQL Queries Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>