force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueryLocatorRows__c</fullName>
    <formula>TEXT(Nebula__LimitsSoqlQueryLocatorRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueryLocatorRowsMax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Query Locator Rows</label>
    <type>Text</type>
</CustomField>