force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueryLocatorRowsUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueryLocatorRowsUsed__c</fullName>
    <label>SOQL Query Locator Rows Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>