force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueryRows__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueryRows__c</fullName>
    <formula>TEXT(Nebula__LimitsSoqlQueryRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsSoqlQueryRowsMax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Query Rows</label>
    <type>Text</type>
</CustomField>