force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoqlQueryRowsMax__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoqlQueryRowsMax__c</fullName>
    <label>SOQL Query Rows Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>