force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LimitsSoslSearchesUsed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LimitsSoslSearchesUsed__c</fullName>
    <label>SOSL Searches Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>