force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__Log__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Log__c</fullName>
    <label>Log</label>
    <referenceTo>Nebula__Log__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>LogEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>