force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__LoggingLevelWithImage__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoggingLevelWithImage__c</fullName>
    <formula>CASE(
    TEXT(Nebula__LoggingLevel__c),
    &apos;ERROR&apos;, IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;&apos;, 16, 16),
    &apos;WARN&apos;, IMAGE(&apos;/img/samples/flag_yellow.gif&apos;, &apos;&apos;, 16, 16),
    IMAGE(&apos;/img/samples/flag_green.gif&apos;, &apos;&apos;, 16, 16)
)
+ &apos; &apos; + TEXT(Nebula__LoggingLevel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>