force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__Origin__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Origin__c</fullName>
    <formula>TEXT(Nebula__OriginType__c) + IF(Nebula__OriginLocation__c == null, &apos;&apos;, &apos;.&apos; + Nebula__OriginLocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>