force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordDetailedLink__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordDetailedLink__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Nebula__RecordId__c)),
    CASE(
        TEXT(Nebula__RecordSObjectClassification__c),
        &apos;Custom Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        &apos;Standard Object&apos;, HYPERLINK(
            &apos;/&apos; + Nebula__RecordId__c,
            TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + IF(
                ISBLANK(Nebula__RecordName__c),
                Nebula__RecordId__c,
                Nebula__RecordName__c
            ),
            &apos;_top&apos;
        ),
        IF(
            ISBLANK(Nebula__RecordId__c),
            null,
            IF(
                ISBLANK(Nebula__RecordName__c) &amp;&amp; NOT(ISBLANK(Nebula__RecordId__c)),
                TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + Nebula__RecordId__c,
                TEXT(Nebula__RecordSObjectType__c) + &apos;: &apos; + Nebula__RecordName__c
            )
        )
    ),
    IF(
        ISBLANK(TEXT(Nebula__RecordCollectionType__c)),
        &apos;&apos;,
        IF(
            TEXT(Nebula__RecordCollectionType__c) = &apos;Map&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;Id, &apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;,
            TEXT(Nebula__RecordCollectionType__c) + &apos;&lt;&apos; + TEXT(Nebula__RecordSObjectType__c) + &apos;&gt;&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>