force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordId__c</fullName>
    <externalId>true</externalId>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>