force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordJson__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordJson__c</fullName>
    <description>JSON of the related SObject record</description>
    <label>Related Record JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>