force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordName__c</fullName>
    <label>Related Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>