force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordSObjectType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordSObjectType__c</fullName>
    <label>Related Record Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>