force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__RecordSObjectTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>Nebula__RecordSObjectTypeNamespace__c</fullName>
    <externalId>true</externalId>
    <label>Related Record Object Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>