force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__TransactionEntryNumber__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TransactionEntryNumber__c</fullName>
    <description>The sequential number of this log entry within the transaction</description>
    <inlineHelpText>The sequential number of this log entry within the transaction</inlineHelpText>
    <label>Entry Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>