force-app/main/default/objects/Nebula__LogEntry__c/fields/Nebula__TriggerIsExecuting__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TriggerIsExecuting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Is Executing</label>
    <type>Checkbox</type>
</CustomField>