force-app/main/default/objects/Nebula__LogEntry__c/listViews/Nebula__All.listView-meta.xml
<ListView>
    <fullName>Nebula__All</fullName>
    <columns>NAME</columns>
    <columns>Nebula__Log__c</columns>
    <columns>Nebula__LoggingLevelWithImage__c</columns>
    <columns>Nebula__LoggedByUsernameLink__c</columns>
    <columns>Nebula__Message__c</columns>
    <columns>Nebula__OriginType__c</columns>
    <columns>Nebula__OriginLocation__c</columns>
    <columns>Nebula__RecordDetailedLink__c</columns>
    <columns>Nebula__Timestamp__c</columns>
    <columns>Nebula__EpochTimestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>